telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestsUnitairesParsing.java
package tutu.titi.toto;

class I {}


public class A {
    static int a1 = 1;
    int[] a = { 3,4,5 };
    public boolean a2 = false;
    String a6 = "jsdjkndjk\njdsdjkf";
    
}
abstract class B extends C {
    B() { super(); }

    int ab;
    
    private A mthis () throws tutu.titi.toto.A{
	int a, b;

	final tutu.titi.toto.A op;
	a(A.a1);
	tutu.titi.toto.A op;
	op.a2=false;

	return new A();
	try {
		a=1;
	} catch (E e) {
	    a=2;
	} finally {
		a=3;    
	}

    }
	
    void a(int v){}

    Int matt4() { this.ab; }
}
public class C extends A {}

