telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestsRecursiveInheritanceFails.java
package tutu.titi.toto;

abstract class B extends C {
    B() { super(); }
    private A mthis () throws tuty.A, tre.tr.b {
	int a, b;
	{
		if(true) {
			if(false) { ; }
			}
		else {
			;
		}
	    int c = 18;
	    { ; }
	    new A();
	    A.m();
	    a[2].m();
	    a[2][6].m();
	    B.A.m();
	    this.m();
	    super();
	    this();
	    super.m();
	    m();
	    for (int c; c > 6 ; c++) { }
	}
	tutu.tyty.a = 1;
	final tutu.tyty.a op;
	a(B.this);
	tutu.a op;
	a = b = 1;
	return new A();
	try {
	} catch (E e) {
	    toto;
	} finally {
	    tutu;
	}
	try {
	} finally {
	    tutu;
	}
	try {
	} catch (E e) {
	    toto;
	}
    }

    Int matt4() { this.ab; }
}

static private class C extends B {}

